@@ -12,7 +12,7 @@
  *
  *
  * IDENTIFICATION
- *	  $PostgreSQL: pgsql/src/interfaces/ecpg/preproc/pgc.l,v 1.161 2008/02/14 12:27:26 meskes Exp $
+ *	  $PostgreSQL: pgsql/src/interfaces/ecpg/preproc/pgc.l,v 1.162 2008/02/15 11:20:21 meskes Exp $
  *
  *-------------------------------------------------------------------------
  */
@@ -47,7 +47,6 @@ static void addlitchar (unsigned char);
 static void parse_include (void);
 static bool ecpg_isspace(char ch);
 static bool isdefine(void);
-static bool isinformixdefine(void);
 
 char *token_start;
 int state_before;
@@ -744,9 +743,7 @@ cppline			{space}*#(.*\\{space})*.*{newline}
 <C>{identifier} 	{
 						const ScanKeyword		*keyword;
 							
-						/* Informix uses SQL defines only in SQL space */
-						/* however, some defines have to be taken care of for compatibility */
-						if ((!INFORMIX_MODE || !isinformixdefine()) && !isdefine())
+						if (!isdefine())
 						{
 							keyword = ScanCKeywordLookup(yytext);
 							if (keyword != NULL)
@@ -1313,36 +1310,6 @@ static bool isdefine(void)
 			yy_scan_string(ptr->new);
 			return true;
 		}
-	}
-
-	return false;
-}
-
-static bool isinformixdefine(void)
-{
-	const char *new = NULL;
-
-	if (strcmp(yytext, "dec_t") == 0)
-		new = "decimal";
-	else if (strcmp(yytext, "intrvl_t") == 0)
-	        new = "interval";
-	else if (strcmp(yytext, "dtime_t") == 0)
-                new = "timestamp";
-
-	if (new)
-	{
-		struct _yy_buffer *yb;
-
-		yb = mm_alloc(sizeof(struct _yy_buffer));
-
-		yb->buffer =  YY_CURRENT_BUFFER;
-		yb->lineno = yylineno;
-		yb->filename = mm_strdup(input_filename);
-		yb->next = yy_buffer;
-		yy_buffer = yb;
-
-		yy_scan_string(new);
-		return true;
 	}
 
 	return false;
